suite/tests/functions/valid/shadow-func.c
int main(void)
{
    int a;
    int main;

    main = 2;
    a = main + 2;

    return a;
}