suite/tests/functions/invalid/func-as-var.c
int main(void)
{
    int a;

    a = main + 2;

    return a;
}
